--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="row">
       <div id="header">
         <button id="refresh-tree-btn" ng-click="refresh()">Refresh Organization Tree</button>
-        <label id="last-refresh-date"></label>
+        <label id="last-refresh-date">{{lastRefreshDateTime}}</label>
       </div>
     </div>
 
@@ -17,7 +17,7 @@
       <div id="container">
 
         <div id="left-panel" class="col-md-2 .col-sm-4 col-xs-12">
-          <abntree tree-data="menus" tree-control="my_tree" on-select="my_tree_handler(branch)" expand-level="2"></abntree>
+          <foldertree tree-data="menus" tree-control="my_tree" on-select="my_tree_handler(branch)" expand-level="2"></foldertree>
         </div>
         
         <div id="middle-panel" class="col-md-8 .col-sm-4 col-xs-12">
@@ -26,10 +26,10 @@
 
         <div id="right-panel" class="col-md-1 .col-sm-4 col-xs-12">
           <label>Select/Unselect</label>
-          <button>Import Organization</button>
-          <button>Import Organization & Users</button>
-          <button>Obsolete Organization</button>
-          <button>Obsolete Users</button>
+          <button ng-click="importOrganization(selectedItem)">Import Organization</button>
+          <button ng-click="importOrganizationAndUsers()">Import Organization & Users</button>
+          <button ng-click="obsoleteOrganization()">Obsolete Organization</button>
+          <button ng-click="obsoleteUsers()">Obsolete Users</button>
         </div>
 
       </div>
@@ -40,7 +40,7 @@
         <button id="save-btn" ng-click="save()">Save</button>
         <button ng-click="saveAndRun()">Save & Schedule run</button>
         <button id="close" ng-click="close()">Close</button>
-        <p id="last-saved"></p>
+        <p id="last-saved">{{lastSavedDateTime}}</p>
       </div>
     </div>
   
@@ -49,8 +49,9 @@
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.12/angular-animate.js"></script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.16/angular-route.min.js"></script>
-  
-  <script src="app/directives/abntree.js"></script>
+
+  <script src="app/directives/jobtree.js"></script>
+  <script src="app/directives/foldertree.js"></script>
   <script src="app/directives/checkboxtree.js"></script>
   <script src="app/app.js"></script>
   <script src="app/controllers/main.js"></script>
