refactor ba-foldertree directive

--- a/index.html
+++ b/index.html
@@ -50,9 +50,11 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.16/angular-route.min.js"></script>
 
-  <script src="app/directives/foldertree.js"></script>
+  <!-- <script src="app/directives/foldertree.js"></script> -->
+  <script src="app/directives/ba-foldertree.js"></script>
   <script src="app/directives/jobtree.js"></script>
-  <script src="app/directives/checkboxtree.js"></script>
+  <!-- <script src="app/directives/checkboxtree.js"></script> -->
+  <script src="app/directives/ba-checkboxtree.js"></script>
   <script src="app/app.js"></script>
   <script src="app/controllers/main.js"></script>
 </html>
