--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 
         <div id="left-panel" class="col-md-2 .col-sm-4 col-xs-12">
           <jobtree tree-data="jobs" on-select="jobTreeHandler(branch)" expand-level="1"></jobtree>
+
+          <ba-foldertree><menu tree-data="jobs" on-select="jobTreeHandler(branch)" expand-level="1"></menu></ba-foldertree>
         </div>
         
         <div id="middle-panel" class="col-md-8 .col-sm-4 col-xs-12">
