--- a/dep/index.html
+++ b/dep/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" href="farm.png">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.1/css/bootstrap.min.css">
 
-    <link rel="stylesheet" href="styles/app.min.css">
+    <link rel="stylesheet" href="app.min.css">
   </head>
   <body ng-controller="MainController" style="margin:20px">
   
@@ -64,5 +64,5 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.16/angular-route.min.js"></script>
 
 
-   <script src="scripts/app/app.min.js"></script>
+   <script src="app.min.js"></script>
 </html>
