--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
 <html ng-app="dtfApp">
   <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>DTF</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
+    <link rel="icon" type="image/png" href="farm.png">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles/app.css">
+    <!-- <link rel="stylesheet" href="styles/app.min.css"> -->
   </head>
   <body ng-controller="MainController" style="margin:20px">
   
@@ -61,4 +68,6 @@
   <script src="app/directives/baCheckboxtree.js"></script>
   <script src="app/app.js"></script>
   <script src="app/controllers/main.js"></script>
+
+   <!-- <script src="scripts/app/app.min.js"></script> -->
 </html>
