--- a/index-dist.html
+++ b/index-dist.html
@@ -8,8 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
     <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="dev/styles/app.css">
-    <!-- <link rel="stylesheet" href="dist/styles/app.min.css"> -->
+    <link rel="stylesheet" href="dist/styles/app.min.css">
   </head>
   <body ng-controller="MainController" style="margin:20px">
   
@@ -63,11 +62,5 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.16/angular-route.min.js"></script>
 
- 
-  <script src="dev/app/directives/baTree.js"></script>
-  <script src="dev/app/directives/baCheckboxtree.js"></script>
-  <script src="dev/app/app.js"></script>
-  <script src="dev/app/controllers/main.js"></script>
-
-   <!-- <script src="dist/scripts/app.min.js"></script> -->
+   <script src="dist/scripts/app.min.js"></script>
 </html>
