--- a/index-dep.html
+++ b/index-dep.html
@@ -6,10 +6,9 @@
     <title>DTF</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-    <link rel="icon" type="image/png" href="farm.png">
+    <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.1/css/bootstrap.min.css">
-
-    <link rel="stylesheet" href="styles/app.min.css">
+    <link rel="stylesheet" href="dev/styles/app.min.css">
   </head>
   <body ng-controller="MainController" style="margin:20px">
   
@@ -63,6 +62,5 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.16/angular-route.min.js"></script>
 
-
-   <script src="scripts/app/app.min.js"></script>
+   <script src="dev/scripts/app.min.js"></script>
 </html>
